C++ with SDL library test app. Enable kernel fbcon. Enable SDL in buildroot. Refactor the hello app, now uses SDL to draw bmp basic image on screen.

--- a/configs/custom_stm32f769_defconfig
+++ b/configs/custom_stm32f769_defconfig
@@ -17,7 +17,9 @@ BR2_LINUX_KERNEL_DTB_IS_SELF_BUILT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="stm32f769-disco"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL_STM32F769_PATH)/stm32f769i-disco/busybox.config"
 BR2_PACKAGE_STRACE=y
+BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_FB_TEST_APP=y
+BR2_PACKAGE_SDL=y
 BR2_PACKAGE_LIBPTHREAD_STUBS=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
@@ -28,3 +30,4 @@ BR2_TARGET_UBOOT_USE_CUSTOM_CONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_STM32F769_PATH)/stm32f769i-disco/uboot.config"
 BR2_TARGET_UBOOT_SPL=y
 BR2_PACKAGE_HOST_OPENOCD=y
+BR2_PACKAGE_HELLO=y
