Linux: enable MPU.

--- a/stm32f769i-disco/kernel.config
+++ b/stm32f769i-disco/kernel.config
@@ -22,6 +22,7 @@ CONFIG_CPU_V7M_NUM_IRQ=240
 CONFIG_SET_MEM_PARAM=y
 CONFIG_DRAM_BASE=0xC0000000
 CONFIG_DRAM_SIZE=0x01000000
+CONFIG_ARM_MPU=y
 # CONFIG_ATAGS is not set
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
