--- a/configs/custom_stm32f769_defconfig
+++ b/configs/custom_stm32f769_defconfig
@@ -18,6 +18,7 @@ BR2_LINUX_KERNEL_INTREE_DTS_NAME="stm32f769-disco"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL_STM32F769_PATH)/stm32f769i-disco/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_SDL=y
+BR2_PACKAGE_SDL_TTF=y
 BR2_PACKAGE_LIBPTHREAD_STUBS=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_INITRAMFS=y
