Disable DRM, IIO, MMC,..., may take too much memory and board may not boot, getting stucked at `Starting kernel ...`. In uboot disable unneeded video driver. Remove unneeded arial.ttf font, and test bmp image (were used for SDL testing).

--- a/stm32f769i-disco/uboot.config
+++ b/stm32f769i-disco/uboot.config
@@ -12,6 +12,7 @@ CONFIG_BOOTDELAY=1
 CONFIG_USE_BOOTARGS=y
 CONFIG_BOOTARGS="console=ttySTM0,115200 earlyprintk consoleblank=0 ignore_loglevel"
 CONFIG_BOOTCOMMAND="run conditionalboot"
+CONFIG_CONSOLE_MUX=y
 # CONFIG_DISPLAY_CPUINFO is not set
 # CONFIG_DISPLAY_BOARDINFO is not set
 CONFIG_BOARD_EARLY_INIT_F=y
@@ -27,7 +28,6 @@ CONFIG_CMD_MMC=y
 CONFIG_CMD_SNTP=y
 CONFIG_CMD_DNS=y
 CONFIG_CMD_LINK_LOCAL=y
-CONFIG_CMD_BMP=y
 CONFIG_CMD_CACHE=y
 CONFIG_CMD_TIMER=y
 # CONFIG_SPL_DOS_PARTITION is not set
@@ -54,14 +54,4 @@ CONFIG_MII=y
 CONFIG_SPI=y
 CONFIG_DM_SPI=y
 CONFIG_STM32_QSPI=y
-CONFIG_DM_VIDEO=y
-CONFIG_BACKLIGHT_GPIO=y
-CONFIG_VIDEO_BPP8=y
-CONFIG_VIDEO_BPP16=y
-CONFIG_VIDEO_BPP32=y
-CONFIG_VIDEO_LCD_ORISETECH_OTM8009A=y
-CONFIG_VIDEO_STM32=y
-CONFIG_VIDEO_STM32_DSI=y
-CONFIG_VIDEO_STM32_MAX_XRES=480
-CONFIG_VIDEO_STM32_MAX_YRES=800
 CONFIG_OF_LIBFDT_OVERLAY=y
