Minimal hello application.

--- a/configs/custom_stm32f769_defconfig
+++ b/configs/custom_stm32f769_defconfig
@@ -28,4 +28,5 @@ BR2_TARGET_UBOOT_USE_CUSTOM_CONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_STM32F769_PATH)/stm32f769i-disco/uboot.config"
 BR2_TARGET_UBOOT_SPL=y
 BR2_PACKAGE_HOST_OPENOCD=y
+BR2_PACKAGE_HELLO=y
 BR2_LINUX_KERNEL_VERSION="5.6.15"
